--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
     "description": "Curso de Programación BackEnd - UNTREF",
     "scripts": {
         "start": "node --watch --no-warnings ./src/server.js",
+        "read": "node ./src/routes/readjson.js",
         "stop": "killall -9 node",
         "eslint": "eslint ./src"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/totolino545/PROYECTO3-JuanAdolfoHerrera.git"
     },
     "keywords": [],
     "author": "Juan Adolfo Herrera",
